fix contact section spacing issue

--- a/src/stylesheets/contact.css
+++ b/src/stylesheets/contact.css
@@ -1,7 +1,3 @@
-.Contact-container {
-  margin-top: auto;
-}
-
 #contact {
   display: flex;
   flex-direction: row;
